--- a/css/style.css
+++ b/css/style.css
@@ -1,13 +1,52 @@
+@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@300&display=swap');
+
+
+body{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 100vh;
+    font-family: 'Roboto', sans-serif;
+}
+
 .form{
     display: flex;
+    justify-items: center;
+    gap: 1rem;
+    background-color: cornflowerblue;
+    padding: 2rem;
+    background: rgb(2,0,36);
+    background: linear-gradient(90deg, rgba(2,0,36,1) 0%, rgba(9,9,121,1) 35%, rgba(0,212,255,1) 100%);
+    color: white;
+}
+/* 
+.form > *{
+    width: 50%;
+} */
+
+.left-side{
+    display: flex;
     flex-direction: column;
-    width: 100%;
-    height: 100vh;
-    align-items: center;
-    justify-content: center;
     gap: 1rem;
 }
 
-.form > *{
-    width: 50%;
+.left-side > *{
+    background-color: gray;
+    padding: 1rem 3rem;
+}
+
+.right-side{
+    display: flex;
+    flex-direction: column;
+    gap: 1rem;
+}
+
+.right-side > *{
+    padding: 1rem  1rem;
+}
+
+@media (width <= 768px) {
+   .form{
+    flex-direction: column;
+   }
 }
